# alfred

./: .gitignore  CLAUDE.md  README.md  TOOLS.md  requirements.txt  run.sh
.claude/: gsd-file-manifest.json  settings.json
.planning/: .continue-here.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.1-MILESTONE-AUDIT.md
Rod Wave/: 00-Master-Index.md  01-Client-Overview.md  02-Contacts-Directory.md  03-Marketing-Budget-Spend.md  04-Sales-Performance.md  05-Venues-Directory.md  06-Communications-Log.md  07-Media-Assets-Manifest.md  08-Digital-Analytics.md  Winter Redemption Tour Sales.md  rod_wave_knowledge_base_additional 2022-2026.md
config/: .env.example  settings.py
core/api/: fairgame.py  (+13 more)
data/: backup_status.json  claw_monitor_state.json  conversations.db-shm  conversations.db-wal  daily_tasks.json  design_preferences.json  email_monitor_state.json  evening_ping_state.json  forge_accounts.json  hunter_sync_state.json  meta_ads_validation.json
docs/: MORNING_BREW_BUILD_GUIDE.md  google_ads_api_design_doc.md  symmetry-architecture-plan-v1.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
integrations/: design_review.py  gpu_manager.py  klaviyo_client.py
lucius/: README.md
lucius/mcp-claw-tools/: pyproject.toml
lucius/mcp-claw-tools/src/mcp_claw_tools/: __init__.py  script_tool.py  server.py  tools.json
lucius/mcp-claw-tools/tests/: test_script_tool.py  test_server_smoke.py
migrations/: 2026-05-14-seo-initial-schema.sql  2026-05-16-seo-keywords-audit-costs.sql
(+874 files in other folders)
